--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,20 +2,54 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
+body {
+  font-family: Arial, Helvetica, sans-serif;
 }
 
-@media (prefers-color-scheme: dark) {
+* {
+
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+
+}
+
+@layer base {
   :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
+    --radius: 0.5rem;
   }
 }
 
-body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+
+::selection {
+  background: rgb(255, 255, 255);
+  /* background color for the selected text */
+  color: rgb(0, 0, 0);
+  /* text color for the selected text */
+}
+
+
+
+/* For WebKit browsers */
+::-webkit-scrollbar {
+  width: 10px;
+  /* width of the scrollbar */
+}
+
+::-webkit-scrollbar-track {
+  background: white;
+  /* background of the track */
+}
+
+::-webkit-scrollbar-thumb {
+  background: black;
+  /* color of the scrollbar thumb */
+  border-radius: 6px;
+  /* rounded edges for the thumb */
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: rgb(46, 46, 46);
+  cursor: pointer;
+  /* color when hovering over the thumb */
 }
